--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
 		"cc:sdd:install": "tsx src/commands/installSddCommand.tsx"
 	},
 	"devDependencies": {
-		"@types/node": "^24.3.0",
-		"@types/react": "^19.1.10",
-		"ink": "^6.2.1",
+		"@types/node": "^24.7.0",
+		"@types/react": "^19.2.2",
+		"ink": "^6.3.1",
 		"ink-select-input": "^6.2.0",
-		"react": "^19.1.1",
-		"tsx": "^4.20.4",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.3"
+		"react": "^19.2.0",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9"
 	},
 	"license": "MIT",
 	"author": {
 		"name": "Sean Mars"
-	}
+	},
+	"packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34"
 }
